--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://KanikaDobliyal.github.io/portfolio",
   "name": "kanika-portfolio",
   "version": "0.1.0",
   "private": false,
